fixed left align issue with auto margins on outer div

--- a/css/other.css
+++ b/css/other.css
@@ -711,8 +711,9 @@ body strong {
 
 .appstore-cell a,
 .appstore-li a {
-	display: inline-block;
-	overflow: hidden;
+	/* display and overflow disabled for flow in table with convo*/
+	/*display: inline-block; */
+	/*overflow: hidden;*/
 	background: url('https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_appstore-lrg.png') no-repeat;
 	width: 135px;
 	height: 40px;
