--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,11 @@ height: 100%;
 
 .outer{
 	display: table;
-	position: absolute;
+	/*position: absolute;*/
 	height: 100%;
 	width: 75%;
-	left: 22%; /* adjust */
+	margin-left: auto;
+	margin-right: auto;
   /*background-color: grey;*/
 
 }
@@ -263,7 +264,9 @@ height: 100%;
 
 #index-footer {
 	width: 100%;
-	position: fixed;
+	display: table-cell;
+	vertical-align: middle;
+	/*position: absolute;   flow w/ msg now*/
 	bottom: 0;
 	height: auto;
 	z-index: 700;
